5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1680_2471.log
== TEST (2019-04-25 20:14:43) 
-- CODE:
idade=int(input('digite asua idade:  '))
imc=int(float('ditige seu imc:'))
imc=imc.upper()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    imc=int(float('ditige seu imc:'))
ValueError: could not convert string to float: 'ditige seu imc:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:15:17) 
-- CODE:
idade=int(input('digite asua idade:  '))
imc=int(float('ditige seu imc:'))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    imc=int(float('ditige seu imc:'))
ValueError: could not convert string to float: 'ditige seu imc:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:16:44) 
-- CODE:
idade=int(input('digite asua idade:  '))
imc=int(input('digite seu imc: '))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    imc=int(float('ditige seu imc:'))
ValueError: could not convert string to float: 'ditige seu imc:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:23:47) 
-- CODE:
idade=int(input('digite asua idade:  '))
imc=int(input('digite seu imc: '))

#calculando o IMC
if(idade >= 45) and imc < 22:
	print("IMC e medio ")
	if(idade >= 45 and imc >= 45):
		print('IMC é alto')
		if(idade <45) and imc >=22:
			print('imc é medio')
else:
	print('imc é baixo')


-- OUTPUT:
imc é baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:25:12) 
-- CODE:
idade=int(input('digite asua idade:  '))
imc=int(input('digite seu imc: '))

#calculando o IMC
if(idade >= 45) and imc < 22:
	print("IMC e medio ")
	if(idade >= 45 and imc >= 45):
		print('IMC é alto')
		if(idade <45) and imc >=22:
			print('imc é medio')
		else: 
			print('icm baixo')


-- OUTPUT:
imc é baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:55:39) 
-- CODE:
tempo=int(input('quantos anos tem seu carro?'))
if tempo <=:
	print('carro novo')
else:
	print('carro velho')

-- ERROR:
File "XXXX", line 2
    if tempo <=:
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:55:59) 
-- CODE:
tempo=int(input('quantos anos tem seu carro?'))
if tempo <=5:
	print('carro novo')
else:
	print('carro velho')

-- OUTPUT:
carro novo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:56:07) 
-- CODE:
tempo=int(input('quantos anos tem seu carro?'))
if tempo <=5:
	print('carro novo')
else:
	print('carro velho')

-- OUTPUT:
carro novo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:56:12) 
-- CODE:
tempo=int(input('quantos anos tem seu carro?'))
if tempo <=5:
	print('carro novo')
else:
	print('carro velho')

-- OUTPUT:
carro novo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:56:36) 
-- CODE:
tempo=int(input('quantos anos tem seu carro?'))
if tempo <=5:
	print('carro novo')
else:
	print('carro velho')
print('--Fim--')


-- OUTPUT:
carro novo
--Fim--
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 20:56:42) 
-- CODE:
tempo=int(input('quantos anos tem seu carro?'))
if tempo <=5:
	print('carro novo')
else:
	print('carro velho')
print('--Fim--')


-- OUTPUT:
carro novo
--Fim--
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
